[package]
name = "sorted-vhost"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking"] }
tokio = { version = "1.40", features = ["full"] }
scraper = "0.20"
serde = { version = "1.0", features = ["derive"] }
libc = "0.2"

[profile.release]
opt-level = 3
