[package]
name = "sorted-vhost"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.37", features = ["full"] }
scraper = "0.19"
libc = "0.2"
url = "2.5"
